# whatsapp-group-wrapped

./: .gitignore  README.md  pyproject.toml  run_quiz.py
.claude/skills/whatsapp-group-wrapped/: SKILL.md
.claude/skills/whatsapp-group-wrapped/references/: whatsapp_data.py
quiz/: __init__.py  game_state.py  scoring.py  server.py
quiz/static/css/: galette.css
quiz/templates/: master.html  player.html
