[project]
name = "whatsapp-quiz"
version = "0.1.0"
description = "Real-time multiplayer quiz game for WhatsApp Group Wrapped"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0",
]

[project.scripts]
quiz = "run_quiz:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quiz"]
